bases/infrastructure/cluster-autodiscover-api/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cluster-autodiscover
    component: api
  name: cluster-autodiscover-api
  namespace: default
spec:
  selector:
    matchLabels:
      app: cluster-autodiscover
      component: api
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: cluster-autodiscover
        component: api
    spec:
      containers:
        - image: binkcore.azurecr.io/kube-autodiscover-api:latest
          imagePullPolicy: Always
          name: server
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          ports:
            - containerPort: 9000
              protocol: TCP

      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: binkcore.azurecr.io
