bases/infrastructure/cluster-autodiscover-api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cluster-autodiscover
    component: api
  name: cluster-autodiscover-api
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9000
  selector:
    app: cluster-autodiscover
    component: api
  sessionAffinity: None
  type: ClusterIP
